add delete feature

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,6 +8,7 @@
     "metadata-image": "Image",
     "action": "Action",
     "display": "Display",
+    "delete": "Delete",
     "report": "Report",
     "tx-sent": "Transaction has been sent.",
     "view-on-flow-view-source": "View in FlowViewSource",
@@ -17,12 +18,14 @@
     "report-message": "Please let us know if there is any problems with the image or text in this NFT.",
     "thank-you-for-reporting-message": "Thank you for the report!",
     "display-notification-message": "When the NFT is displayed, it will disappear from \"My Collection\" and appear in \"Showcase\".",
+    "delete-notification-message": "Do you really want to delete this?",
     "button": {
         "view": "View",
         "withdraw": "Withdraw",
         "report": "Report",
         "publish": "Make!",
         "send": "Send",
+        "delete": "Deleted",
         "ok": "OK",
         "cancel": "Cancel"
     }
